// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bucket is public 1`] = `
"{
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"main_mybucket_D82BB8A6\\": {}
    },
    \\"aws_s3_bucket_policy\\": {
      \\"main_mybucket_PublicPolicy_75426D93\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_mybucket_D82BB8A6.bucket}\\",
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Principal\\\\\\":\\\\\\"*\\\\\\",\\\\\\"Action\\\\\\":[\\\\\\"s3:GetObject\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.main_mybucket_D82BB8A6.arn}/*\\\\\\"]}]}\\"
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"main_mybucket_Encryption_B7F93ECC\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_mybucket_D82BB8A6.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    }
  }
}"
`;

exports[`create a bucket 1`] = `
"{
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"main_mybucket_D82BB8A6\\": {}
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"main_mybucket_PublicAccessBlock_2F5C011D\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.main_mybucket_D82BB8A6.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"main_mybucket_Encryption_B7F93ECC\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_mybucket_D82BB8A6.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    }
  }
}"
`;
